--- a/C/基础.md
+++ b/C/基础.md
@@ -4,3 +4,27 @@
 
 <a href="./C语言优先级.pdf">C 优先级</a>
 
+1. 括号
+2. 单目，非，取地址，自增自减，sizeof，强转换类型
+3. 算数运算符
+4. 关系运算符
+5. 逻辑运算符
+
+#### 短路运算
+
+- &&短路与，&非短路与
+- ||短路或，|非段路或
+
+如果结果不为2时，打印错误，省略了if等复杂的代码。
+
+```C++
+ret!=2 && printf("result error");
+```
+
+如果变量var不为5，把它设置成5.
+
+```c++
+int var = 3;
+var!=5&&var=5
+```
+
