--- a/C/基础.md
+++ b/C/基础.md
@@ -1,6 +1,6 @@
 # C 语言基础
 
-#### C语言优先级
+### C语言优先级
 
 <a href="./C语言优先级.pdf">C 优先级</a>
 
@@ -10,7 +10,7 @@
 4. 关系运算符
 5. 逻辑运算符
 
-#### 短路运算
+### 短路运算
 
 - &&短路与，&非短路与
 - ||短路或，|非段路或
