--- a/C/基础.md
+++ b/C/基础.md
@@ -21,10 +21,13 @@
 ret!=2 && printf("result error");
 ```
 
-如果变量var不为5，把它设置成5.
+如果变量var为边界为0～4（包括4）的环时，把则当var为5时，
 
 ```c++
-int var = 3;
-var!=5&&var=5
+int var = 4;
+while(1){
+	var++;
+	var==5&&var=0;
+}
 ```
 
