基础和指针

--- a/C/基础.md
+++ b/C/基础.md
@@ -31,3 +31,76 @@ while(1){
 }
 ```
 
+### switch
+
+注意加break
+
+```c++
+switch (expression){
+    case 1:
+        break;
+    case 2:
+        break;
+    default:
+        break;
+}
+```
+
+### goto
+
+goto 只能在同一函数内部跳转
+
+```c++
+goto label；
+
+label: statement;
+```
+
+### 数组
+
+- Intel CPU体系对变量存储时小端存储，及地位在前，高位在后。
+- 后来ARM CPU 的也推广成小端存储
+- IBM，龙芯 CPU还是大端存储
+- 定义 
+  - 直接定义 
+  - 间接定义
+
+```c++
+// 直接定义
+int a[5]; //中括号内必须是个常量，不能写成int a[i]，及数组的大小不能动态定义
+// 间接定义
+#define NUM 10;
+int b[NUM]={1,2,3,4,5,6,7,8,9,10};
+```
+
+- 字符数组
+
+```c++
+char a[15] = "Hello World";
+char a[20] = "你好中国"; 
+/*汉字为GBK编码，每个汉字占两个字节，因而这几个字再加\0，一共占9个字节。
+GBK总体编码范围为0x8140~0xFEFE，首字节在 0x81~0xFE 之间，尾字节在 0x40~0xFE 之间，剔除 xx7F 一条线。*/
+```
+
+### 字符串函数
+
+- puts(char *)
+
+  ```c++
+  char c[10]="hello";
+  puts(c); //puts 打印一个字符串（带\0）,puts()默认会打印一个换行符
+  ```
+
+- gets(char *)
+
+  ```c++
+  char buf[10];
+  gets(buf);    //读取一行输入到buf中，gets与scanf的区别是，scanf("%s",buf)读取时，不能读取终端输入的 Hello World,因为scanf读取%s时以\0作为分隔符，他会把这行输入当作两个输入；而gets以换行符为分隔符，因而可以读取整行
+  //gets读取一行以后会对这行字符串结尾赋\0
+  ```
+
+- strlen(char *)  in <string.h>
+
+- strcpy(char * to, char * from) , 拷贝的时候会拷贝\0结束符的
+
+- strcat(char * head, char * tail)，拷贝tail到head中
