基础和指针

--- a/C/指针.md
+++ b/C/指针.md
@@ -4,5 +4,5 @@
 
 同理，64位处理器有$2^{64}$个内存单元，及4G个4GB。这是虚拟地址，不是实际内存大小，实际内存大小可能是插入的8GB内存条，或是16GB内存。
 
-当程序运行时，操作系统会为每个程序分配运行所需的实际内存地址空间，这就是动态**地址转换** 的过程。
+当程序运行时，操作系统会为每个程序分配运行所需的实际内存地址空间，这就是动态```地址转换``` 的过程。
 
