基础和指针

--- a/C/指针.md
+++ b/C/指针.md
@@ -6,3 +6,18 @@
 
 当程序运行时，操作系统会为每个程序分配运行所需的实际内存地址空间，这就是动态```地址转换``` 的过程。
 
+***因而在编程时所说的地址，指的是虚拟地址，及虚拟地址空间。***
+
+- 当是64位处理器时（AMD，Intel）
+
+  ```c++
+  int i = 5;
+  long j = long(&j);
+  printf("%lx",j);
+  //输出结果为：7ffee068f718
+  //及只使用了48位虚拟地址，48位虚拟地址相当于256TB
+  ```
+
+  
+
+- 当是32位处理器时，地址空间应该是0x00000001~0xffffffff，其中0x00000000保留位系统0。
