基础和指针

--- a/C/指针.md
+++ b/C/指针.md
@@ -8,6 +8,8 @@
 
 ***因而在编程时所说的地址，指的是虚拟地址，及虚拟地址空间。***
 
+#### 64位 VS 32位 处理器
+
 - 当是64位处理器时（AMD，Intel）
 
   ```c++
@@ -16,8 +18,40 @@
   printf("%lx",j);
   //输出结果为：7ffee068f718
   //及只使用了48位虚拟地址，48位虚拟地址相当于256TB
+  //但是
+  printf("%ld",&i);
+  //输出结果为8，及指针变量为8个字节
   ```
 
   
 
-- 当是32位处理器时，地址空间应该是0x00000001~0xffffffff，其中0x00000000保留位系统0。
+- 当是32位处理器时，地址空间应该是0x00000001~0xFFFFFFFF，其中0x00000000保留位系统0。64位处理器，也可以通过兼容模式，来编写32位程序。
+
+#### 小端模式与栈空间
+
+以64位处理器(48位实际被利用)为例
+
+```c++
+int i = 5;
+int j = 9;
+printf("%lx\n",long(pi));
+printf("%lx\n", long(pj));
+/*输出结果为	 7ffee990b718
+		    7ffee990b714
+说明：
+1. int占4个字节 
+2.i先定义，j后定义，但是i的地址比j地址大，
+则栈空间向低地址方向增长*/
+
+long t = long(pi);
+printf("%d\n",*((int *)t)); //将t强转化成int*，然后解引用
+// 输出5
+t++;
+printf("%d\n",*((int *)t)); 
+// 输出0
+/*说明：
+小端模式
+*/
+
+```
+
