--- a/C/指针.md
+++ b/C/指针.md
@@ -36,8 +36,7 @@ int i = 5;
 int j = 9;
 printf("%lx\n",long(pi));
 printf("%lx\n", long(pj));
-/*输出结果为	 7ffee990b718
-		    7ffee990b714
+/*输出结果为	 7ffee990b718 和 7ffee990b714
 说明：
 1. int占4个字节 
 2.i先定义，j后定义，但是i的地址比j地址大，
@@ -52,6 +51,6 @@ printf("%d\n",*((int *)t));
 /*说明：
 小端模式，即变量的高字节在虚拟内存的低地址空间存储。
 */
-
 ```
 
+因而，若一个变量int i=5的地址为0x003a58fe（32位），他有指针变量int * p = &i，则p中存储的值为fe 58 3a 00。
