基础和指针

--- a/C/指针.md
+++ b/C/指针.md
@@ -54,3 +54,15 @@ printf("%d\n",*((int *)t));
 ```
 
 因而，若一个变量int i=5的地址为0x003a58fe（32位），他有指针变量int * p = &i，则p中存储的值为fe 58 3a 00。
+
+#### 定义指针
+
+连续定义指针
+
+```c++
+int a, b; //定义两个整型变量
+int *p,q; //注意～～～～～p是整型指针，q是整型变量
+//应该定义成
+int *p, *q;
+```
+
