--- a/C/指针.md
+++ b/C/指针.md
@@ -1,12 +1,12 @@
 # C语言指针
 
-32位处理器，有$2^{32}$个内存单元，及4GB。4G是虚拟地址，不是实际的内存大小，因而你的32CPU可以插入一个2G的内存条。
+32位处理器，有$2^{32}​$个内存单元，即4GB。4G是虚拟地址，不是实际的内存大小，因而你的32CPU可以插入一个2G的内存条。
 
-同理，64位处理器有$2^{64}$个内存单元，及4G个4GB。这是虚拟地址，不是实际内存大小，实际内存大小可能是插入的8GB内存条，或是16GB内存。
+同理，64位处理器有$2^{64}​$个内存单元，即4G个4GB。这是虚拟地址，不是实际内存大小，实际内存大小可能是插入的8GB内存条，或是16GB内存。
 
 当程序运行时，操作系统会为每个程序分配运行所需的实际内存地址空间，这就是动态```地址转换``` 的过程。
 
-***因而在编程时所说的地址，指的是虚拟地址，及虚拟地址空间。***
+***因而在编程时所说的地址，指的是虚拟地址，即虚拟地址空间。***
 
 #### 64位 VS 32位 处理器
 
@@ -17,10 +17,10 @@
   long j = long(&j);
   printf("%lx",j);
   //输出结果为：7ffee068f718
-  //及只使用了48位虚拟地址，48位虚拟地址相当于256TB
+  //即只使用了48位虚拟地址，48位虚拟地址相当于256TB
   //但是
   printf("%ld",&i);
-  //输出结果为8，及指针变量为8个字节
+  //输出结果为8，即指针变量为8个字节
   ```
 
   
