基础和指针

--- a/C/指针.md
+++ b/C/指针.md
@@ -2,7 +2,7 @@
 
 32位处理器，有$2^{32}​$个内存单元，即4GB。4G是虚拟地址，不是实际的内存大小，因而你的32CPU可以插入一个2G的内存条。
 
-同理，64位处理器有$2^{64}​$个内存单元，即4G个4GB。这是虚拟地址，不是实际内存大小，实际内存大小可能是插入的8GB内存条，或是16GB内存。
+同理，64位处理器有$2^{64}$个内存单元，即4G个4GB。这是虚拟地址，不是实际内存大小，实际内存大小可能是插入的8GB内存条，或是16GB内存。
 
 当程序运行时，操作系统会为每个程序分配运行所需的实际内存地址空间，这就是动态```地址转换``` 的过程。
 
@@ -54,6 +54,16 @@ printf("%d\n",*((int *)t));
 ```
 
 因而，若一个变量int i=5的地址为0x003a58fe（32位），他有指针变量int * p = &i，则p中存储的值为fe 58 3a 00。
+
+### 虚拟内存地址空间
+
+程序的虚拟地址空间有如下图结构
+
+<img src="./images/image003.gif">
+
+- .text，即正文段存储可执行程序的二进制代码。
+- .data，即数据段存储程序执行时的常量。
+- stack，heap增长方向相反。
 
 #### 定义指针
 
