基础和指针

--- a/C/指针.md
+++ b/C/指针.md
@@ -59,7 +59,9 @@ printf("%d\n",*((int *)t));
 
 程序的虚拟地址空间有如下图结构
 
+<div align="middle">
 <img src="./images/image003.gif" align="middle">
+</div>
 
 - .text，即正文段存储可执行程序的二进制代码。
 - .data，即数据段存储程序执行时的常量。
