--- a/C/指针.md
+++ b/C/指针.md
@@ -78,4 +78,6 @@ int *p,q; //注意～～～～～p是整型指针，q是整型变量
 int *p, *q;
 ```
 
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default">$$x=\frac{a}{b-c}$$</script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+
+$$x=\frac{a}{b-c}$$
