--- a/C/指针.md
+++ b/C/指针.md
@@ -82,4 +82,4 @@ int *p, *q;
 
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
 
-$$x=\frac{a}{b-c}$$
+$x=\frac{a}{b-c}$
