--- a/C/指针.md
+++ b/C/指针.md
@@ -1,5 +1,3 @@
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
-
 # C语言指针
 
 32位处理器，有$2^{32}​$个内存单元，即4GB。4G是虚拟地址，不是实际的内存大小，因而你的32CPU可以插入一个2G的内存条。
@@ -80,6 +78,14 @@ int *p,q; //注意～～～～～p是整型指针，q是整型变量
 int *p, *q;
 ```
 
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+<img src="http://latex.codecogs.com/gif.latex?1+sin(x) \frac{a}{b}" border="0"/>
 
-$x=\frac{a}{b-c}$
+ 
+
+ 
+
+ 
+
+ 
+
+ 
