--- a/C/指针.md
+++ b/C/指针.md
@@ -78,7 +78,7 @@ int *p,q; //注意～～～～～p是整型指针，q是整型变量
 int *p, *q;
 ```
 
-<img src="http://latex.codecogs.com/gif.latex?1+sin(x) \frac{a}{b}" border="0"/>
+<img src="https://latex.codecogs.com/gif.latex?1+sin(x) \frac{a}{b}" border="0"/>
 
  
 
