--- a/C/指针.md
+++ b/C/指针.md
@@ -67,7 +67,7 @@ printf("%d\n",*((int *)t));
 - .data，即数据段存储程序执行时的常量。
 - stack，heap增长方向相反。
 
-#### 定义指针
+### 定义指针
 
 连续定义指针时**注意**
 
@@ -76,6 +76,20 @@ int a, b; //定义两个整型变量
 int *p,q; //注意～～～～～p是整型指针，q是整型变量
 //应该定义成
 int *p, *q;
+```
+
+### 指针与函数参数
+
+一个函数想改变调用者函数中的变量必须用指针。因为不同函数在栈区域都有各自的``` 函数栈空间```，函数栈空间参数传递采用值传递方式，因而***改变函数内参数的值，不会改变调用参数的值***
+
+若想通过调用函数来改变调用者的值，必须通过```指针```，进行传递。这种通过```参数指针```来修改原函数的参数成为**```传出参数```**。
+
+```c++
+#define OUT
+void change(OUT int *p){
+    //OUT没有实际意义，只是指明参数p为传出指针
+    //作用是通过change函数来改变调用参数的值
+}
 ```
 
 
