基础和指针

--- a/C/指针.md
+++ b/C/指针.md
@@ -94,7 +94,17 @@ void change(OUT int *p){
 
 
 
- 
+### 堆和栈
+
+- 栈
+
+  程序的变量，函数，都会在栈区域申请空间。此处申请的空间是**虚拟地址空间**，而操作系统将虚拟地址空间的栈空间映射到**物理内存**时，对应的物理空间也是连续的。例如申请一个int a[20]，这80个字节的空间在实际分配到的物理地址也是连续的。
+
+  正因如此，栈空间的分配和使用比较高效。
+
+- 堆
+
+  程序通过malloc开辟的空间属于堆空间，且分配到的堆空间在**虚拟地址空间**是连续的。但是，当操作系统将堆空间映射到实际物理内存地址时，**堆空间由物理上分割的碎片空间拼接而成**。因而对空间的开辟，连续性使用效率会低于栈空间。
 
  
 
