基础和指针

--- a/C/指针.md
+++ b/C/指针.md
@@ -104,7 +104,7 @@ void change(OUT int *p){
 
 - 堆
 
-  程序通过malloc开辟的空间属于堆空间，且分配到的堆空间在**虚拟地址空间**是连续的。但是，当操作系统将堆空间映射到实际物理内存地址时，**堆空间由物理上分割的碎片空间拼接而成**。因而对空间的开辟，连续性使用效率会低于栈空间。
+  程序通过malloc等函数开辟的空间属于堆空间，且分配到的堆空间在**虚拟地址空间**是连续的。但是，当操作系统将堆空间映射到实际物理内存地址时，**堆空间由物理上分割的碎片空间拼接而成**。因而对空间的开辟，连续性使用效率会低于栈空间。
 
  
 
