--- a/C/指针.md
+++ b/C/指针.md
@@ -106,7 +106,18 @@ void change(OUT int *p){
 
   程序通过malloc等函数开辟的空间属于堆空间，且分配到的堆空间在**虚拟地址空间**是连续的。但是，当操作系统将堆空间映射到实际物理内存地址时，**堆空间由物理上分割的碎片空间拼接而成**。因而对空间的开辟，连续性使用效率会低于栈空间。
 
- 
+  - 堆开辟
+
+    ```c++
+    #include <stdlib.h>
+    void *malloc(size_t size);  //返回一个空指针，指向开辟堆堆虚拟地址空间首地址。
+    // size_t 指int类型，一般表示空间大小。
+    
+    //因而开辟1MB的堆空间可以写成
+    void * p = malloc(1<<20);
+    ```
+
+    
 
  
 
