--- a/C/指针.md
+++ b/C/指针.md
@@ -117,6 +117,10 @@ void change(OUT int *p){
     void * p = malloc(1<<20);
     ```
 
+    堆开辟空间大小的上限是**物理内存大小**，实际工作中，开辟过大服务器堆内存需要向组织申请。
+
+    开辟堆空间会出现的***问题***
+
     
 
  
