--- a/C/指针.md
+++ b/C/指针.md
@@ -119,7 +119,11 @@ void change(OUT int *p){
 
     堆开辟空间大小的上限是**物理内存大小**，实际工作中，开辟过大服务器堆内存需要向组织申请。
 
-    开辟堆空间会出现的***问题***
+    开辟堆空间会出现的**问题**
+
+    1. 开辟堆空间后没有```free(p)```，对于高频发的业务，内存会很快被吃空。
+    2. 堆指针进行过运算后再free，即```p++; free(p)```，此时程序崩溃，因为内存释放范围出错。
+    3. 丢失了堆首地址指针，如```p=p2```，这样的情况被称为**内存泄漏**，长期内存泄漏也会造成内存吃紧。
 
     
 
