--- a/C/指针.md
+++ b/C/指针.md
@@ -78,6 +78,10 @@ int *p,q; //注意～～～～～p是整型指针，q是整型变量
 int *p, *q;
 ```
 
+### 指针的解引用
+
+取值运算符```*```优先级低于自增自减```++``` ```--```运算符。因而(* p)++，指内容增加1，*p++，指取p后一个元素的值。
+
 ### 指针与函数参数
 
 一个函数想改变调用者函数中的变量必须用指针。因为不同函数在栈区域都有各自的``` 函数栈空间```，函数栈空间参数传递采用值传递方式，因而 **改变函数内参数的值，不会改变调用参数的值**
@@ -125,8 +129,26 @@ void change(OUT int *p){
     2. 堆指针进行过运算后再free，即```p++; free(p)```，此时程序崩溃，因为内存释放范围出错。
     3. 丢失了堆首地址指针，如```p=p2```，这样的情况被称为**内存泄漏**，长期内存泄漏也会造成内存吃紧。
 
-    
+    堆开辟，在操作系统实现上遵从：
 
- 
+    ***延迟分配，lazy model或写时分配***
+
+    即只有当对对内存中存入实际内容是，malloc才会实际分配内存。
+
+    ```c++
+    #include<stdlib.h>
+    void *p;
+    while(1){
+        p = malloc(1<<20);
+    } //该循环不会崩溃，lazy model
+    
+    int * p1;
+    while(1){
+        p1 = (int *)malloc(1<<20);
+        *p1 = 5;
+    } //该循环很快会崩溃，即malloc分配不成功，不是指内存泄漏问题。
+    ```
+
+    
 
  
