--- a/C/指针.md
+++ b/C/指针.md
@@ -96,7 +96,13 @@ void change(OUT int *p){
 }
 ```
 
+多重指针与解引用的关系
 
+<div align="middle">
+
+<img src="./images/Picture1.png" height=300 width=180>
+
+</div>
 
 ### 堆和栈
 
@@ -151,4 +157,27 @@ void change(OUT int *p){
 
     
 
- 
+ ### 指针数组与数组指针
+
+- 数组指针，即一个指针指向一个数组
+
+  ```c++
+  int a[3][5];
+  int (*p)[5];
+  p = a; //因为[]优先级比*优先级高，因而需要加()。
+  // 这定义的是一个指针p每个指针指向一个int[5]
+  
+  void func(int (*p)[5], int row); //定义一个函数，需要传递一个数组指针，参数[5]必须指明；
+  // row代表多少行。
+  ```
+
+- 指针数组
+
+  ```c++
+  int a[3][5];
+  int *p[5];
+  p = a;  //*先与int和p结合，即p是一个数组名，其中每个元素为整型指针
+  ```
+
+  
+
