--- a/C/指针.md
+++ b/C/指针.md
@@ -96,7 +96,7 @@ void change(OUT int *p){
 }
 ```
 
-多重指针与解引用的关系
+多重指针与解引用的关系。```int a[3][4]```。
 
 <div align="middle">
 
@@ -168,6 +168,8 @@ void change(OUT int *p){
   // 这定义的是一个指针p每个指针指向一个int[5]
   
   void func(int (*p)[5], int row); //定义一个函数，需要传递一个数组指针，参数[5]必须指明；
+  //或是
+  void func(int p[][5], int row);
   // row代表多少行。
   ```
 
