--- a/C/指针.md
+++ b/C/指针.md
@@ -157,7 +157,7 @@ void change(OUT int *p){
 
     
 
- ### 指针数组与数组指针
+ ### 指针数组，数组指针，二级指针
 
 - 数组指针，即一个指针指向一个数组
 
@@ -179,6 +179,21 @@ void change(OUT int *p){
   int a[3][5];
   int *p[5];
   p = a;  //*先与int和p结合，即p是一个数组名，其中每个元素为整型指针
+  ```
+
+- 二级指针
+
+  ```c++
+  int a = 5;
+  int b = 6;
+  int *p = &a;
+  int *q = &b;
+  void swap(int **m, int **n){
+      int * temp;
+      temp = *m;
+      *m = *n;
+      *n = temp;
+  }	//二级指针的使用场景，就是通过调用函数，来改变原函数的指针。
   ```
 
   
