--- a/C/指针.md
+++ b/C/指针.md
@@ -188,12 +188,12 @@ void change(OUT int *p){
   int b = 6;
   int *p = &a;
   int *q = &b;
-  void swap(int **m, int **n){
+  void swap(int **m, int **n){ //二级指针的使用场景，就是通过调用函数，来改变原函数的指针。
       int * temp;
       temp = *m;
       *m = *n;
       *n = temp;
-  }	//二级指针的使用场景，就是通过调用函数，来改变原函数的指针。
+  }
   swap(&p,&q);
   ```
 
