--- a/C/指针.md
+++ b/C/指针.md
@@ -184,17 +184,28 @@ void change(OUT int *p){
 - 二级指针
 
   ```c++
+  //二级指针的使用场景，就是通过调用函数，来改变原函数的指针。
   int a = 5;
   int b = 6;
   int *p = &a;
   int *q = &b;
-  void swap(int **m, int **n){ //二级指针的使用场景，就是通过调用函数，来改变原函数的指针。
+  void swap(int **m, int **n){ 
       int * temp;
       temp = *m;
       *m = *n;
       *n = temp;
   }
   swap(&p,&q);
+  ```
+
+  ```c++
+  //另一种使用场景，二级指针的使用场景。二级指针完美等价指针数组
+  int *a[4]; //a为一个数组名，数组的元素为整形指针，因而a等价于二级指针
+  int ** p ;
+  p = a;	//此处正确
+  p++;	
+  //此处正确，因为a时数组名，是常量，不能进行运算和赋值。而p是变量，可以进行++操作
+  printf("%s\n",*p);
   ```
 
   
