--- a/C/指针.md
+++ b/C/指针.md
@@ -132,8 +132,21 @@ void change(OUT int *p){
     开辟堆空间会出现的**问题**
 
     1. 开辟堆空间后没有```free(p)```，对于高频发的业务，内存会很快被吃空。
+
     2. 堆指针进行过运算后再free，即```p++; free(p)```，此时程序崩溃，因为内存释放范围出错。
+
     3. 丢失了堆首地址指针，如```p=p2```，这样的情况被称为**内存泄漏**，长期内存泄漏也会造成内存吃紧。
+
+    4. free(p)后，虽然p指向的堆空间被释放，但是p变量中还是存储着堆空间地址值。因为free()函数的参数接收的是值传递p而不是&p地址，因而不能对p变量空间里的值进行修改。所以一般步骤是
+
+       ``` c++
+       void *p = malloc(5);
+       free(p);
+       p = NULL; //这步很关键，如果不赋值为空，p就成为-----野指针-----
+       //对野指针误操作，会造成系统崩溃
+       ```
+
+       
 
     堆开辟，在操作系统实现上遵从：
 
@@ -200,12 +213,14 @@ void change(OUT int *p){
 
   ```c++
   //另一种使用场景，二级指针的使用场景。二级指针完美等价指针数组
-  int *a[4]; //a为一个数组名，数组的元素为整形指针，因而a等价于二级指针
+  int *a[4]={"How","are","you",NULL}; //a为一个数组名，数组的元素为整形指针，因而a等价于二级指针
   int ** p ;
   p = a;	//此处正确
-  p++;	
-  //此处正确，因为a时数组名，是常量，不能进行运算和赋值。而p是变量，可以进行++操作
-  printf("%s\n",*p);
+  int i = 0;
+  while(*p!=NULL){
+      puts(*p);
+      p++; //此处正确，因为a是数组名，是常量，不能进行运算和赋值。而p是变量，可以进行++操作
+  }
   ```
 
   
