--- a/C/函数.md
+++ b/C/函数.md
@@ -7,8 +7,24 @@
 
 ### 函数栈
 
+若函数如下
+
+```c++
+void func1(int);
+int main(int args,char *argv[]){
+    int a = 5;
+    func1(a);
+}
+void func1(int a){
+    a = 6;
+}
+//因为是值传递，所以不改变main中a的值
+```
+
 <div align="middle">
 
 <img src="./images/stack1.png" width=400>
 
 </div>
+
+函数栈属于栈空间，通过调用关系依次压栈。
