--- a/C/函数.md
+++ b/C/函数.md
@@ -4,6 +4,7 @@
 
 - 每个.c文件在会被单独的编译成为.obj文件，obj文件中会保留函数的入口地址。
 - 函数以文件为单位进行编译。从上至下编译。
+- 当函数调用时，在本文件内或是include的头文件中，必须有对该函数的实现或声明。
 
 ### 函数栈
 
@@ -28,3 +29,17 @@ void func1(int a){
 </div>
 
 函数栈属于栈空间，通过调用关系依次压栈。
+
+程序执行过程中，只有当执行到某条函数的时候，程序才会为该函数分配函数栈空间。
+
+***好的程序设计，应该尽量减少---形参个数***
+
+- 减少网络压力
+- 降低耦合度
+
+### 参数传递
+
+一个函数只有两种方式可以返回值
+
+- 函数返回值
+- 传出参数，即形参为地址形式。如：```void func(int * a);```
