函数栈跳转

--- a/C/函数.md
+++ b/C/函数.md
@@ -30,6 +30,13 @@ void func1(int a){
 
 函数栈属于栈空间，通过调用关系依次压栈。
 
+若要非常规的返回函数需要用到
+
+```c++
+#include<setjmp.h>
+int setjmp(jmp_buf env_buf); //该函数可以保存当前函数的上下文，然后根据自定义跳转函数。类似于函数栈级别的 goto语句。
+```
+
 程序执行过程中，只有当执行到某条函数的时候，程序才会为该函数分配函数栈空间。
 
 ***好的程序设计，应该尽量减少---形参个数***
