函数栈跳转

--- a/C/函数.md
+++ b/C/函数.md
@@ -35,6 +35,21 @@ void func1(int a){
 ```c++
 #include<setjmp.h>
 int setjmp(jmp_buf env_buf); //该函数可以保存当前函数的上下文，然后根据自定义跳转函数。类似于函数栈级别的 goto语句。
+//例如
+jmp_buf env_buf;
+int ret;
+int main(){
+    ret = setjmp(env_buf);  //函数第一次跳转ret被赋值为0，以后跳转，函数被设置成longjmp时conf参数的值
+    func1();
+}
+void func1(){
+    puts("不执行func2");
+    longjmp(env_buf,conf);  //
+    func2();
+}
+void func2(){
+    ;
+}
 ```
 
 程序执行过程中，只有当执行到某条函数的时候，程序才会为该函数分配函数栈空间。
