--- a/C/基础.md
+++ b/C/基础.md
@@ -20,6 +20,19 @@
 
   局部变量只在离他定义最近的```{```，```}```内有效。
 
+- 外部变量或全局变量
+
+  外部变量时在函数之外定义的变量。它的作用域为，从函数定义开始到本文件结束。
+
+  应该尽量少的定义全局变量，因为全局变量在内存地址空间中占用的是```数据段```，数据段包括```常量区```，```全局区```等。**不同文件中的全局变量都放在数据段内。**因而若是在不同文件中定义同名的全局变量，它们都会被放入```全局区```，从而产生同名错误。此时，需要关键字```extern```。
+
+### 变量的作用时期
+
+- 动态存储：变量被分配后可以被收回，例如**函数的调用与弹栈**，**堆空间的分配和收回**。
+- 静态存储：常量区，程序区。
+- 作用时间关键字```auto```，```static```，```register```，
+  - auto为缺省
+  - static修饰局部变量，局部变量就不被放在函数栈内（即不会因为函数的消亡而消失），它会被放在```数据段```中的```静态区```，内，并且只被初始化一次。**静态局部变量与全局变量的区别在于，静态局部变量虽然被放在数据段区域内，但它还是隶属于函数作用域范围内的，也就是说，只有本函数能对他进行操作**。
 
 ### 短路运算
 
@@ -69,7 +82,7 @@ label: statement;
 
 ### 数组
 
-- Intel CPU体系对变量存储时小端存储，及地位在前，高位在后。
+- Intel CPU体系对变量存储时用小端存储方式，即低位在前，高位在后。
 - 后来ARM CPU 的也推广成小端存储
 - IBM，龙芯 CPU还是大端存储
 - 定义 
