--- a/C/基础.md
+++ b/C/基础.md
@@ -30,9 +30,16 @@
 
 - 动态存储：变量被分配后可以被收回，例如**函数的调用与弹栈**，**堆空间的分配和收回**。
 - 静态存储：常量区，程序区。
-- 作用时间关键字```auto```，```static```，```register```，
+- 可操作变量属性的关键字```auto```，```static```，```register```，```extern```
   - auto为缺省
-  - static修饰局部变量，局部变量就不被放在函数栈内（即不会因为函数的消亡而消失），它会被放在```数据段```中的```静态区```，内，并且只被初始化一次。**静态局部变量与全局变量的区别在于，静态局部变量虽然被放在数据段区域内，但它还是隶属于函数作用域范围内的，也就是说，只有本函数能对他进行操作**。
+  - static
+    - 修饰局部变量，局部变量就不被放在函数栈内（即不会因为函数的消亡而消失），它会被放在```数据段```中的```静态区```内，并且只被初始化一次。**静态局部变量与全局变量的区别在于，静态局部变量虽然也被放在数据段区域内，但它还是隶属于函数作用域范围内的，也就是说，只有本函数能对他进行操作**。
+    - 修饰全局变量，则该变量就从```全局区```，跑到```文件区```，即该变量只在**本文件**有效。
+    - 修饰函数，函数只在**本文件**范围内有效。
+  - register，令一个变量强制进驻寄存器并让其长期占有寄存器，适用于高频率计算的临时变量。
+  - extern
+    - 修饰变量，则类似于声明其它地方的变量。其它地方可以指**其他文本中的全局变量或是该文本后面定义的变量位置**
+    - 函数，缺省就是extern
 
 ### 短路运算
 
