--- a/C/文件.md
+++ b/C/文件.md
@@ -93,7 +93,25 @@ fclose(fp);
   // ret返回读取成功字符的个数。
   ```
 
-  
+- fgets()，fputs()，从文件里面读写一行。
+
+  ```c
+  #include <stdio.h>
+  char * fgets ( char * str, int num, FILE * stream );
+  // str为一行字符串，num表示写入的字节数，stream为文件指针
+  int fputs ( const char * str, FILE * stream );
+  ```
+
+- fprint()，fscanf()，格式化输入输出文件
+
+  ```c
+  #include <stdio.h>
+  int fscanf ( FILE * stream, const char * format, ... );   //返回匹配成功的匹配参数个数
+  int fprintf ( FILE * stream, const char * format, ... );	//返回输出成功的字节数
+  // fscanf 和 fprintf 只比printf，scanf多了一个第一个参数，文件指针
+  ```
+
+  **fscanf返回匹配成功的参数个数，而不是字节数**，例如“%d %s %f”，若都匹配成功，返回3。
 
 
 
