--- a/C/文件.md
+++ b/C/文件.md
@@ -34,7 +34,7 @@ fclose(fp);
 程序访问内核空间时，需要调用造作系统所提供的接口，进程从而从用户态转到内核态。
 
 <div align="middle">
-<img src="/Users/chenrui/Github/Notes_2018/C/images/image003.gif" align="middle">
+<img src="./images/image003.gif" align="middle">
 </div>
 
 如上图，最上面的命令行参数及环境变量区域，即为**内核空间（对应唯一一份操作系统维护的物理内存空间）**。```stdin```，```stdout```，```stderr```三种标准缓冲区指针所指向的地址就在该空间内。
@@ -111,7 +111,7 @@ fclose(fp);
   // fscanf 和 fprintf 只比printf，scanf多了一个第一个参数，文件指针
   ```
 
-  **fscanf返回匹配成功的参数个数，而不是字节数**，例如“%d %s %f”，若都匹配成功，返回3。
+  **fscanf返回匹配成功的参数个数，而不是字节数**。例如“%d %s %f”，若都匹配成功，返回3。
 
 
 
