--- a/C/文件.md
+++ b/C/文件.md
@@ -48,7 +48,7 @@ fclose(fp);
 1. 文件打开是同步 fopen
 2. 文件关闭时同步 fclose
 
-#### 光标操作
+#### 定位操作
 
 - fseek()，移动光标
 
@@ -61,6 +61,14 @@ fclose(fp);
   // SEEK_CUR，即当前位置
   // SEEK_END，即文件结尾
   ```
+
+- ftell()，返回光标当前位置相对于文件开头的字节数。
+
+  ```c
+  long int ftell ( FILE * stream );
+  ```
+
+  
 
 #### 函数
 
