--- a/C/文件.md
+++ b/C/文件.md
@@ -70,7 +70,7 @@ fclose(fp);
 
   
 
-#### 函数
+#### 读写函数
 
 - fgetc()和fputc() 读写一个字符
 
@@ -120,6 +120,8 @@ fclose(fp);
   ```
 
   **fscanf返回匹配成功的参数个数，而不是字节数**。例如“%d %s %f”，若都匹配成功，返回3。
+
+  因而，如果一旦fscanf读取错误，即返回值不等于参数列表数量，那么光标也会异常停止。如上列，读取%d %s %f，如果匹配错误，返回值等于1，即只匹配了%d，而%s %f都没有被匹配。**这样SET_CUR光标也不会正常停留在%f后面，而是会停留在%d结束处**，从而当循环利用fscanf读取结构体时，造成后面的循环都出现位置偏差错误。
 
 
 
