--- a/Linux/基本命令.md
+++ b/Linux/基本命令.md
@@ -1,5 +1,9 @@
 # Linux 基本命令
 
+### 快捷键
+
+- control + R 搜索历史命令
+
 #### 用户
 
 - 用户配置文件存储在```/etc/passwd```中。
@@ -30,3 +34,32 @@
 - /根目录
 - /etc：存放Linux配置信息目录
 - /dev：存放设备文件
+
+#### 一般命令
+
+- which 命令名：查看命令所在位置
+- man 命令名：查看命令手册
+- file 文件名：查看文件类型
+  - ELF：可执行文件
+
+- 目录
+  - mkdir [目录名] :  创建目录
+  - rmdir [目录名] ：删除目录
+- 文件
+  - cp 原位置 目的位置 ：拷贝文件文件
+    - -f 参数：若有同名文件，覆盖替换。
+    - -i 参数： 与-f相反，强制提醒替换。
+    - -r 参数：拷贝目录
+  - mv 原文件 目的文件 ： 移动文件
+    - -f 参数
+    - -i 参数
+  - rm 文件
+    - -f 参数：不提醒删除
+    - -i 参数：提醒删除
+    - -r 参数：删除目录
+  - cat 文件名
+    - -n 参数：对输出的每行现实显示行号，用于查找文件内容
+    - -s 参数：不输出多行的空行，用于整理代码
+    - -b 参数：对非空行编号，用于统计代码行
+    - -E 参数：用\$ 标识每行的结尾，在参考他人代码时，为了保证格式显示正确，用 \$
+
