--- a/Linux/基本命令.md
+++ b/Linux/基本命令.md
@@ -18,7 +18,9 @@
 
 - \- 普通文件，d 目录文件，I 符号文件，b 块设备文件，c 字符设备文件，p 管道文件，s socket文件。
 
-- **chmod 权限 用户名 ** 读4，写2，可执行1。
+- chmod 权限 用户名
+
+  读4，写2，可执行1。
 
   ```shell
   #!/bin/bash
@@ -62,4 +64,3 @@
     - -s 参数：不输出多行的空行，用于整理代码
     - -b 参数：对非空行编号，用于统计代码行
     - -E 参数：用\$ 标识每行的结尾，在参考他人代码时，为了保证格式显示正确，用 \$
-
