--- a/Linux/基本命令.md
+++ b/Linux/基本命令.md
@@ -6,12 +6,34 @@
 
 #### 用户
 
-- 用户配置文件存储在```/etc/passwd```中。
 - **su [用户名]**：切换用户，缺省用户为root
+
 - **whoami** : 查看当前用户名
+
 - **useradd [用户名] -m -s /bin/bash**: 添加一个用户，-m参数表示同时在home目录下建立用户家目录，-s参数表示指定shell脚本解析器。
+
 - **userdel [用户名]** ：删除一个用户
+
 - **passwd [用户名]**：改变用户密码
+
+  - passwd配置信心存储在/etc/passwd文件中
+
+  - ```txt
+    root:x:0:0:Superuser:/:
+    daemon:x:1:1:Systemdaemons:/etc:
+    bin:x:2:2:Ownerofsystemcommands:/bin:
+    ```
+
+  - 每行有七个字段，用```:```分割。依次分别是，
+
+    - 用户名
+    - x，x表示用户口令，该口令被加密过后保存在/etc/shadow中
+    - 用户id，0表示root的id，1～999为系统保留id，1000+普通用户id
+    - 组id，保存在/etc/group中
+    - 注释性描述，可以任意指定内容，用来描述用户基本信息
+    - 家目录
+    - shell，shell地址
+
 - **exit** ：推出用户
 
 #### 文件类型和权限
@@ -31,6 +53,8 @@
   chmod a+r file // 所有用户添加读权限
   ```
 
+- umask 命令可以查看当前用户的权限掩码
+
 #### Linux 目录结构
 
 - /根目录
@@ -43,6 +67,8 @@
 - man 命令名：查看命令手册
 - file 文件名：查看文件类型
   - ELF：可执行文件
+  - ASCII: with CRLF terminators   DOS格式的txt文本
+  - ASCII：Unix格式txt文本，两者之间转换可以用fromdos命令
 
 - 目录
   - mkdir [目录名] :  创建目录
@@ -63,4 +89,72 @@
     - -n 参数：对输出的每行现实显示行号，用于查找文件内容
     - -s 参数：不输出多行的空行，用于整理代码
     - -b 参数：对非空行编号，用于统计代码行
-    - -E 参数：用\$ 标识每行的结尾，在参考他人代码时，为了保证格式显示正确，用 \$
+    - -E 参数：用\$ 标识每行的结尾，在参考他人代码时，为了保证格式显示正确，用 -E参数
+  - head命令和tail命令：查看文件的头部或尾部
+
+### 重定向命令
+
+- 重定向输出 ```>```， 输入文件描述符 > 输出文件描述符
+
+- 重定向输入```<```， 输入文件描述符< 输出文件描述符
+
+- 重定向追加 ```<<```和```>>```
+
+- 文件描述符
+
+  - 0 ：标准输入
+
+  - 1 ：标准输出
+
+  - 2 ：标准错误输出，即perror()函数
+
+    ```c
+    int main(){
+        FILE* fp;
+        printf("Hello World\n");
+        fp = fopen("NoFile");
+        if(NULL==fp){
+            perror("No such File!\n");
+        }
+    }
+    ```
+
+    ```bash
+    gcc main.c -o main
+    ./main > test.log
+    #	执行上条语句你会发现，“>”重定向符会把"Hello World\n"放入test.log中
+    #	>重定向输出默认会执行标准输出重定向
+    #	为了实现真正的test.log记录错误的功能，需要用到标准错误重定向。
+    #	即“2>”
+    #	正确的命令如下
+    ./main 2> test.log	#将标准错误 重定向到test.log
+    ./main 2>> test.log #该命令更标准，因为日志log应该是追加而不是覆盖
+    #	若要将标准输出和标准错误输出同时传递给log，如下
+    ./main > test1.log 2>&1
+    ```
+
+    
+
+### 文件查找命令 find
+
+- find 起始目录 查找条件 操作
+
+- 查找条件
+
+  - -name 文件名：根据文件名查找
+  - -gid id ：根据组id查找
+  - -uid id ：根据用户id查找
+  - -group “字符串” ：根据组名查找
+  - -user “字符串” ：根据用户名查找
+  - -a：条件与
+  - -o：条件或
+  - ！：条件非，**！之前没有-**
+  - -type：文件类型
+    - d  目录文件; f 普通文件；d块文件；p管道文件；c字符设备文件；l链接文件；s socket文件
+
+- ```bash
+  find . -name file1 -a -type d
+  # 查找 . 目录下，名字为file1，同时类型为目录的文件
+  ```
+
+  
