--- a/Linux/基本命令.md
+++ b/Linux/基本命令.md
@@ -3,6 +3,8 @@
 ### 快捷键
 
 - control + R 搜索历史命令
+- control + A 光标回到输入命令头
+- control + E 光标回到输入命令尾
 
 #### 用户
 
@@ -54,6 +56,12 @@
   ```
 
 - umask 命令可以查看当前用户的权限掩码
+
+- chown，如果root为一个用户user1在home中创建了一个家目录user1，此时该目录的所有者和用户组都是root，因而user1无法修改该目录下的文件，所以需要更改使用者和用户组
+
+  - ```bash
+    chown user1:user1 user1 # 将文件夹user1 的user和group 都改成user1
+    ```
 
 #### Linux 目录结构
 
@@ -135,7 +143,7 @@
 
     
 
-### 文件查找命令 find
+### 文件查找命令 find，xargs，grep
 
 - find 起始目录 查找条件 操作
 
@@ -157,4 +165,58 @@
   # 查找 . 目录下，名字为file1，同时类型为目录的文件
   ```
 
-  
+- find 命令一般会结合```xargs```命令同时使用
+
+  **xargs** 命令的主要作用是将之前传递的数据```逐条```作为输入传递给后一个命令
+
+- ```bash
+  find /usr/include -name stdio.h | xargs ls -l
+  # 把find查找的结果作为标准输入，传递给ls -l。xargs命令会把该命令逐条专递给ls
+  ```
+
+- **grep** 命令，查找文件中的内容来查找文件
+
+- ```bash
+  # 通常也是要结合其他命令
+  find /usr/include -name "*.c" | xargs grep main
+  # 查询/usr/include下以.c结尾的文件中，包含main字符串的文件。xargs的作用时逐条传入前一个命令输出
+  #grep 命令是查找文件内容命令
+  ```
+
+  - grep 正则表达式 文件名
+  - 参数，正则表达式
+  - ^x ，以x开头
+  - x$，以x结尾
+
+### 打包压缩文件
+
+- tar 打包文件
+  - tar 参数 目标文档 原文档
+  - 参数 cfv， c表示创建一个打包文档，v表示显示大包内容
+  - 参数r，表示追加文件到打包文档
+  - 参数x，表示解压打包文档
+  - 参数z，表示打包并压缩成gzip，此时目标文档名最好添加.gz后缀
+- gzip 压缩命令
+  - gzip 归档文件名
+  - -v 参数，显示压缩比率
+  - -d 参数，解压压缩文档
+- bzip2
+  - bzip2 归档文件名
+  - -v 参数，显示压缩比率
+  - -d 参数，解压压缩文档
+
+### 远程拷贝
+
+- scp  原文件URL   目的文件URL
+
+- URL格式
+
+  - 用户名@IP:文件绝对路径
+
+  - 例如 
+
+    ```bash
+    scp user1@192.168.1.123:/home/user1/file1 user2@192.168.1.88:/home/user2/file1
+    ```
+
+- -r 参数，拷贝文件夹
