--- a/Linux/基本命令.md
+++ b/Linux/基本命令.md
@@ -179,7 +179,7 @@
 - ```bash
   # 通常也是要结合其他命令
   find /usr/include -name "*.c" | xargs grep main
-  # 查询/usr/include下以.c结尾的文件中，包含main字符串的文件。xargs的作用时逐条传入前一个命令输出
+  # 查询/usr/include下以.c结尾的文件中，包含main字符串的文件。xargs的作用是逐条传入前一个命令输出
   #grep 命令是查找文件内容命令
   ```
 
