--- a/C/文件.md
+++ b/C/文件.md
@@ -11,13 +11,14 @@ fclose(fp);
 #### 文件打开模式
 
 -  ```r```，打开一个只读文件，光标处于文件头
-- ```w```，新建一个写文件，若原先存在同名文件，删除后再新建。
-- ```a```，追加文件，用于写入，若不存在原文件，新建文件，若存在原文件，光标处于文件为末尾
-- ```rb```，```wb```，```ab```，同上三个，只是打开的必须以二进制文件。
-- ```r+```，打开一个用于读写的文件，打开时光标在文件头。
-- ```w+```，打开一个用于读写的文件，若有同名文件，先删除在创建
-- ```a+```，打开一个用于读写的文件，光标在文件尾。
-- ```rb+```，```wb+```，```ab+```，同理，打开时光标在文件尾
+-  ```w```，新建一个写文件，若原先存在同名文件，删除后再新建。
+-  ```a```，追加文件，用于写入，若不存在原文件，新建文件，若存在原文件，光标处于文件为末尾
+-  ```rb```，```wb```，```ab```，同上三个，只是打开的必须以二进制文件。
+-  ```r+```，打开一个用于读写的文件，打开时光标在文件头。
+-  ```w+```，打开一个用于读写的文件，若有同名文件，先删除在创建
+-  ```a+```，打开一个用于读写的文件，光标在文件尾。
+-  ```rb+```，```wb+```，```ab+```，同理，打开时光标在文件尾
+-  ```a```模式和```w```模式的本质区别在于，```a```模式下每次写永远是在文件结尾。例如先写两次，然后用fseek偏移光标位置读一个字符，然后又写，此时写入的内容仍在文件结尾。即```a```模式每次写，首先先把光标偏移到文件结尾，然后再写。
 
 #### Windows和Linux文本模式
 
