--- a/Linux/进程.md
+++ b/Linux/进程.md
@@ -230,14 +230,51 @@ wait和waitpid函数：当子进程先于父进程结束，子父进程必须做
           // 子进程就变成zombie进程。
           // wait(NULL) 只执行一次，即如果多个子进程同时结束
           // wait接收一个信号量就返回结束。因而若要回收所有
-          // 子进程，则需要循环wait，n次
+          // 子进程，则需要循环wait，n次。
           // wait()表示随机等待子进程，不指定特殊一个
           pid_t waitpid(pid_t pid, int *wstatus, int options);
           // 该函数可以指定等待那一个子进程结束
-          // 参数wstatus，是一个传入传出参数，表示子进程的程序返回值
+          // 参数wstatus，是一个传入传出参数，表示子进程的程序返回值，
+          // 主要是main返回值，而不是一般函数的返回值
           // 即子进程个return值，可以用该传入传出参数携带出来。
           // 填写NULL，表示不需要返回值
       }   
   }
 ```
+
+wait的参数：
+
+- status：是个整型的传入传出参数，调用wait后会对该参数赋值，使其携带退出时信息（return或exit信息）。这些信息占status的其中几位，另外几位另有它用。对于检查该参数，有几个宏函数：
+  - **WIFEXITED(**wstatus**)** ：子进程正常返回，则该函数返回true。此处正常的概念定义为，非程序定义的return或exit处终止。程序定义的return包括主动定义的exit函数，return 0，return -1（即使是错误返回，也是程序员指定好的一条路径，因而返回也是true），非定义返回则是指程序执行过程中出现的错误，例如解引用空指针，数组越界等
+  - **WEXITSTATUS(**wstatus**)** ：当子进程正常返回，即上一步为true，则该函数返回程序携带出来的返回值，即return 值
+
+waitpid的参数：
+
+- status：同wait
+- option：主要的是用**WNOHANG**，该参数值会在执行到该代码时检测指定id的子进程有没有退出（发送信号量），若有则回收其资源，完成清理工作。若没有直接跳过代码，继续执行后面代码，即**WNOHANG**参数会阻止父进程在执行wait时挂起sleep。**WNOHANG**是宏定义的一个整数。
+- 返回值：成功回收指定进程则返回相应的pid。若是指定进程存在，但是其状态没有发生改变（R，T，S，Z），则返回0。若是错误，则返回-1
+
+####进程终止
+
+进程终止形式由5种
+
+1. main函数自然返回，即return返回。但是其他定义的函数的return，则不预示着进程返回。因而在子程序，或是堆栈调用函数中，想让程序终止，则只能用exit函数。**因而，return的作用单是返回并退出本函数**，由于main是程序开始执行的第一个函数，即函数栈最底层函数，因而main返回，就意味着程序终止。
+
+2. exit函数
+
+3. _exit函数
+
+   exit函数是对标准库_exit函数调用的封装，因为Linux对所有文件的操作都建立了内存缓冲机制，因而Linux通过exit系统调用对 _exit进行封装从而实现对缓冲区的写回等操作。因而 _eixt系统调用的使用会有风险，即内存数据没有被写回文件的风险。
+
+   exit和_exit区别如下：
+
+   <div align="middle">
+
+   <img src="./images/process.png" width=500>
+
+   </div>
+
+4. abort函数
+
+5. 系统信号量
 
