--- a/Python/传输和固化.md
+++ b/Python/传输和固化.md
@@ -28,3 +28,33 @@ newDict = pickle.load(dbfile1)
 # newDict 就等于 dict('LiLi'=LiLi,'Bob'=Bob)
 ```
 
+#### 获取文件名
+
+```python
+import glob
+filenames = glob.glob("*.txt")
+# 获取当前路径下所有.txt结尾的文件名
+for filename in filenames:
+    print(filename)
+```
+
+#### 利用框架，固化对象
+
+```python
+import shelve  #导入固化框架shelve
+# 定义所要存储的对象
+data1 = dict(name='dog',age=44,hobby="running")
+data2 = 6666
+db_w = shelve.open("test")
+# 用框架shelve 打开一个文件test，该框架会生成文件'test.db'
+db_w['data1']=data1
+db_w['data2']=data2 #向打开的框架文件中写入对象
+db_w.close()
+## 写文件缓冲
+
+# 读文件
+db_r = shelve.open("test") #因为test.db已存在，所以实际是打开该文件
+list(db_r) #列出所有keys
+db_r['data1'] # 返回data1对象
+```
+
