--- a/Linux/线程.md
+++ b/Linux/线程.md
@@ -1,5 +1,9 @@
 # Linux 线程
 
+此处线程使用POSIX标准，阅读文档添加使用
+
+```apt-install manpages-posix-dev```命令添加
+
 ### 进程VS线程
 
 #### 进程
@@ -34,7 +38,7 @@
 
 - 因而，线程的创建第一步**创建线程起始入口点**，也就是找一个函数，把它设置为一个线程，使得这个函数拥有被单独调度的权限。
 
-- 由于线程使用的是同一内存地址空间，因而可以实现数据的共享（除了自己的栈内存），因而若是同一进程生成的线程之间传递数据，不需要**共享内存(shmget)**
+- 由于线程使用的是同一内存地址空间，因而可以实现数据的共享（除了自己的栈内存），因而若是同一进程生成的线程之间传递数据，不需要**共享内存机制(即shmget，shared memory只发生在同一主机不同进程之间)**
 
 - ```main线程```比较特殊，它的退出会造成该进程的退出，从而结束整个线程簇。
 
@@ -210,5 +214,193 @@ int main(){
     **此处的重点是**：return和exit的区别；以及pop(0),pop(1)的区别，以及pop的位置
 
 
+### 线程的同步与互斥
 
+#### 线程的同步
 
+```同步```概念是与```异步```相对
+
+#### 互斥锁
+
+线程的互斥锁为```mutex```
+
+互斥锁等价于**初始化为1的信号量**，两者是相同概念。
+
+**锁**在操作系统下分为两种：
+
+- 自旋锁```spinlock```，该中锁一般用于内核，嵌入式，等性能要求比较高的地方。其原理是，一个锁如果锁住了某个变量，其他的来到的进程（或线程）不停的访问锁的状态。即，如果锁一打开，则第一时间抢占该锁资源（此处，锁也沦为了一种需要抢占的共享资源）。该锁的特性为CPU负载很大（因为需要不停的访问锁的状态），但是共享性能很好，对共享资源的使用利用率比较高
+- 睡眠锁```sleeplock```，该锁的特点是，一旦访问某资源，发现该资源被占用（被锁），则直接进入阻塞状态（此处不持续访问锁状态），阻塞一段时间后再访问或是等待解锁程序发送**唤醒信号**。
+
+**锁**的对象：只要是```线程公用的区域```，不再线程函数栈中定义的变量都可以做为被锁的共享资源
+
+锁的操作
+
+```c
+#include <pthread.h>
+pthread_mutex_t mutex; 
+// 定义了一个锁mutex
+int pthread_mutex_init(pthread_mutex_t *restrict mutex,
+           const pthread_mutexattr_t *restrict attr);
+// 锁的动态初始化，将该锁的地址传入， attr表示初始化参数设置
+// 该种方式动态初始化
+pthread_mutex_t mutex = PTHREAD_MUTEX_INITIALIZER;
+// 该种方式为静态初始化，即对mutex直接赋一个宏定义的参数
+ int pthread_mutex_init(pthread_mutex_t *restrict mutex,
+           const pthread_mutexattr_t *restrict attr);
+// mutex的销毁
+```
+
+锁的使用方法：
+
+```c
+void * thread_func(void * p){ // 子线程函数里只是+1000000操作和传递进来个结构体参数
+    for(int k=0;k<10000000;k++){
+        pthread_mutex_lock(p->mutex); // 子线程中加锁，该锁在main线程中
+        // 创建，通过地址传入这里，所以子线程和main线程操作的是同一把锁
+        (p->i)++;
+        pthread_mutex_unlock(p->mutex); // 子线程解锁
+	}
+}
+int main(){
+    int i=0; // 定一个共享变量
+    // 因为虽然变量i存在于main函数的线程栈。但是由于main线程比较特殊
+    // 由于main线程的生存周期一直存在（与该进程一致），因而它的线程栈空间
+    // 内的变量也可以用来当作共享资源。
+    // 什么能当共享资源？：那些不依赖某一线程存在的，其他进程可以访问到的资源
+    // 都能当共享资源（按理说其他函数的函数栈中的变量也能被访问到，
+    // 只要传给地址就可以）
+    // 例如全局变量（存储在数据区），malloc空间（堆区），栈区中的某些变量（main
+    // 中的变量，虽然main线程是特定的自己的线程栈，但是通过地址参数传递，
+    // 可以供其他线程共享使用）
+    
+    // 因而此处int i可以被当作共享资源，被多个线程共同访问。只要把地址传入就行。
+    pthread_mutex_t mutex; // 定义一个互斥变量
+    struct combine{  //因为需要把两个变量同时传递给其他线程，所以定义个结构体
+        // 包含这两个的指针
+        pthread_mutex_t * pmutex;
+        int * i ;
+    };
+    struct combine aaa;
+    aaa.pmutex = &mutex;
+    aaa.i = &i;  // 定义了该结构体变量aaa
+    pthread_t pthid;
+    phread_create(&pthid,NULL,thread_func,(void *)&aaa);// 创建子线程
+    for (int j=0;j<10000000;j++){  //在main线程中对共享资源i加10000000
+        pthread_mutex_lock(&mutex); //加锁
+        i++; 
+        pthread_mutex_unlock(&mutex);  //解锁
+    }
+    pthread_join(pthid,NULL); // 收集子线程
+    printf("i = %d\n",i);
+}
+```
+
+#### 一种死锁情况
+
+如果对一把普通锁（mutex），一个线程连续加两次锁，则直接死锁
+
+```c
+pthread_mutex_lock(&mutex);
+pthread_mutex_lock(&mutex);//此处线程自身会把自身阻塞掉，一位此处锁已被关闭
+//共享资源操作代码。。
+pthread_mutex_unlock(&mutex);
+pthread_mutex_unlock(&mutex);
+```
+
+解决此问题可以设置```递归锁```(recursive_mutex)，即在创建mutex时指定该锁变量的属性
+
+```c
+pthread_mutex_t r_mutex; //定义一个锁
+pthread_mutexattr_t attr;// 定义一个初始化参数变量attr，用来设置锁的一些特性
+pthread_mutexattr_init(&attr); // 对该初始化参数attr，初始化
+pthread_mutexattr_settype(&attr, PTHREAD_MUTEX_RECURSIVE);
+// 对该初始化参数进行设置，传入attr地址，进行设置，设置成宏定义的整型数
+// PTHREAD_MUTEX_RECURSIVE。PTHREAD_MUTEX_RECURSIVE代表
+// ----该锁可以被同一进程上锁多次（同时也需要解锁多次），不同进程不能加锁（若被锁住）
+// 这样用这个attr初始化r_mutex锁
+pthread_mutex_init(&r_mutex,&attr);
+// 这样就解决了上面的死锁问题
+```
+
+#### 条件变量
+
+```条件变量```类似于```互斥锁```，他与互斥锁不同之处在于，条件变量可以设定某一个访问条件，而互斥锁，只是单单探查mutex能不能被使用。因而它的灵活性比互斥锁高
+
+***条件变量属于线程级别的信号量机制***
+
+***条件变量一定要与互斥锁，同步使用，一定要在wait外围加解锁***
+
+```c
+#include <pthread.h>
+typedef struct {
+    pthread_cond_t cond; // 建立一个条件变量
+    pthread_mutex_t mutex; // 不但需要条件变量，还需要互斥锁变量
+}datap;
+
+void * thread_func(void *p) {// 线程执行函数
+	struct datap *pt = (datap *) p;//(强转成需要的类型)
+    
+    //****************重要下面*******
+    // 使用条件变量一定要有下面顺序
+    pthread_mutex_lock(&p->mutex);  // 第1行
+    pthread_cond_wait(&p->cond,&p->mutex);
+    pthread_mutex_unlock(&p->mutex);  // 第3行
+    // 一定要先加锁，然后wait，然后在解锁。
+    
+    // 实际上cond_wait函数内部， 包含下面两个阶段的步骤
+    
+    // 第一步 由于在第1行处加锁，所以一进来，在wait函数判断出，当前线程需要做什么后
+    // 先解锁，即pthread_mutex_unlock(&p->mutex); 使得mutex 可以被其他进程利用
+    // 然后根绝上面的判断，该函数是该去执行，还是去排队，该线程的流程都已经被确定
+    // 假若，该线程因条件变量不满足，被迫去排队，从而该线程就因等待条件变量成立而进入阻塞状态。
+    // 但是由于他已经释放了mutex，因而它的阻塞不会阻挡其他线程进入（无论其他线程是否符合条件）
+    // 
+    // 第二步，该线程的wait也就是真正在等待，直到他收到signal 或是broadcast信号
+    // 再收到信号后，根据排队策略，最终选择了该线程，即该线程符合条件去执行了
+    
+    // 第三部，线程终于满足条件去执行。首先他去执行（当然，执行时条件变量会变），
+    // 执行完毕后，在对mutex加锁，这样的枷锁相配了第3行
+    // 这样该线程就安全退出该区域了。
+    
+    // 综上所述
+    // lock_mutex
+    //		*wait内部*
+    //			unlock mutex
+    //			排队或执行
+    //			若是去排队，则等待条件信号成立（因为unlock了，所以不影响其他线程进来）
+    //			收到条件成立信号（broadcast，signal）
+    // 			去执行
+    //			lock mutex
+    // unlock_mutex
+    
+    // 该中策略主要是用到了两次 加解锁，作用时能使得线程一个个的进入，而不会产生两个线程同时进来
+    // 的情况。因为若两个进线程同时进来，就无法对排队器进行排队，条件参数也会被同时访问。从而
+    // 产生错乱
+    // 直白的讲，mutex的作用就是门， 而条件变量，就是屋子内处理的事情，
+    // 一次只能有一个人通过门，这就是mutex的作用，至于人进入屋子是在里面等待，还是执行，则根据
+    // 条件变量决定，因为一次进来一个，所以不会同时访问该变量的。
+        	
+    pthread_exit((void *)0);
+    
+}
+int main{
+	strcut datap data;
+    pthread_condattr_t attr; // 设置条件变量的初始信息设置变量
+    pthread_condattr_init(& attr); //初始化信息设置变量
+    int pthread_cond_init(&data.cond， &attr);   // 用该初始化变量设置条件变量
+    pthread_cond_t cond = PTHREAD_COND_INITIALIZER;   //或者第二种设置条件变量初始值，通过默认宏来执行
+    pthread_mutex_init(&data.mutex,NULL); //默认初始化互斥锁
+    // 此时通过结构体打包， 将mutex，cond 的地址值（不是值传递，而是地址传递给新线程函数）
+    
+    // 创建新线程id
+    pthread_t id[2];
+    pthread_create(&id[0],&attr,thread_func,(void*)&data);
+    pthread_create(&id[1],&attr,thread_func,(void*)&data);
+    pthread_join(id[0]);
+    pthread_join(id[1]);
+}
+```
+
+- ```pthread_cond_wait()```函数是在等```pthread_cond_signal()```或是```pthread_cond_broadcast()```函数，该函数会发送相应的信号通知wait函数改变条件变量，从而唤醒某一个被条件变量阻塞的线程。broadcast则是唤醒所有被该条件阻塞的线程。
+- ```pthread_cond_timedwait()```，与wait相同，只是在wait上加了个时间期限，即在某段时间内进行等待，如果有信号，则类似于wait一样去执行，如果没有信号来，即超过某段时间后，该语句就被跳过，直接执行后面的语句。
+- 一般线程函数需要push压栈一个清理函数，清理函数应该保证最后的mutex被释放，否则mutex会永远得不到，从而产生锁死的情况。
