--- a/Linux/网络.md
+++ b/Linux/网络.md
@@ -20,7 +20,9 @@
 
 由于Intel和AMD的计算机体系结构都属于```x86```架构。而```x86```架构的计算机存储数据是以**小端模式**进行，而IBM等架构采用**大端模式**。
 
-即，数据的低字节被存储在低地址内存空间，如下：
+即，数据的字节被存储的地址顺序，如下：
+
+内存地址			01 02 03 04 （地址从小到大）
 
 真实数字  	0x	12 34 56 78 （4字节）
 
