--- a/Linux/网络.md
+++ b/Linux/网络.md
@@ -34,7 +34,11 @@ IBM架构		0x	12 34 56 78
 
 ***但是，网络通讯的字节序却是大端模式***
 
-因而在网络通讯之前，接收方和发送方都需要进行数据字节序的转换
+因而在网络通讯之前，接收方和发送方都需要进行数据字节序的转换，即
+
+发送方（无论什么架构）需要用hton函数转化成网络字序
+
+接收方（无论生么架构）需要用ntoh函数转换成主机字序
 
 #### 字节序转换函数
 
@@ -55,4 +59,4 @@ uint16_t ntohs(uint16_t netshort);
 
 上面四个函数是用来对转化数据字节序的。
 
-该函数中存在对**本主机架构的判断**，即如果IBM（本身为大端）他在接收网络上的数据（大端序）后，执行``ntohl或ntohs``，实际的字序不会发生改变，因为传来的数据和本身的体系结构字序是一致的。
+**该函数会判断本主机架构**，即如果IBM（本身为大端）他在接收网络上的数据（大端序）后，执行``ntohl或ntohs``，实际的字序不会发生改变，因为传来的数据和本身的体系结构字序是一致的。
