--- a/Linux/网络.md
+++ b/Linux/网络.md
@@ -12,7 +12,12 @@
     <img src="./images/ip1.png" width="400"/>
     <img src="./images/ip2.png" width="400"/>
 </div>
+### 地址族
 
+地址族如今用到的只有两种：
+
+- IPV4，在初始化时需要给```sa_family```，变量设置为宏 ```AF_INET```
+- IPV6，在初始化时需要给```sa_family```，变量设置为宏```AF_INET6```
 
 ### 网络字节序
 
@@ -59,3 +64,38 @@ uint16_t ntohs(uint16_t netshort);
 上面四个函数是用来对转化数据字节序的。
 
 **该函数会判断本主机架构**，即如果IBM（本身为大端）他在接收网络上的数据（大端序）后，执行``ntohl或ntohs``，实际的字序不会发生改变，因为传来的数据和本身的体系结构字序是一致的。
+
+
+
+### IP
+
+#### IP地址格式转化
+
+我们通常写的ip地址是以```点分十进制```形式列出的，但是```socket套接字```中所需要的格式确是```32位网络字节序```格式的IP地址。
+
+在Linux中，IP地址存储在一个结构体中，可以用```inet_addr()```函数来转换点分十进制位32位网络字节序
+
+```c
+#include <sys/socket.h> 
+#include <netinet/in.h> 
+#include <arpa/inet.h>
+
+struct in_addr{				 // socket中包含的ip地址结构体，里面只有一个变量
+    						 // 即，32位网络字节序
+    unsigned long int s_addr // 32位IPV4网络字节序
+}
+in_addr_t inet_addr(const char *cp);	//将cp（ip字符串）初始化ip网络字节序
+										// inet表示IPV4地址族
+// 所以我们定义一个32位IPV4地址变量
+struct in_addr ip_test;
+ip_test.s_addr = inet_addr("192.168.1.123"); //调用该函数
+
+
+// 类似的函数还有
+int inet_aton(const char *straddr, struct in_addr *addrptr); 
+// 这个类似于inet_addr，只不过返回值是int，标识成功返回1，失败返回0
+char *inet_ntoa(struct in_addr inaddr);
+// 反方向转换，网络字节序转换成点分十进制
+
+```
+
