--- a/C/基础.md
+++ b/C/基础.md
@@ -24,7 +24,7 @@
 
   外部变量时在函数之外定义的变量。它的作用域为，从函数定义开始到本文件结束。
 
-  应该尽量少的定义全局变量，因为全局变量在内存地址空间中占用的是```数据段```，数据段包括```常量区```，```全局区```等。**不同文件中的全局变量都放在数据段内。**因而若是在不同文件中定义同名的全局变量，它们都会被放入```全局区```，从而产生同名错误。此时，需要关键字```extern```。
+  应该尽量少的定义全局变量，因为全局变量在内存地址空间中占用的是```数据段```，数据段包括```常量区```，```全局区```等。**不同文件中的全局变量都放在数据段内**因而若是在不同文件中定义同名的全局变量，它们都会被放入```全局区```，从而产生同名错误。此时，需要关键字```extern```。
 
 ### 变量的作用时期
 
