--- a/C/指针.md
+++ b/C/指针.md
@@ -63,9 +63,12 @@ printf("%d\n",*((int *)t));
 <img src="./images/image003.gif" align="middle">
 </div>
 
-- .text，即正文段存储可执行程序的二进制代码。
-- .data，即数据段存储程序执行时的常量。
-- stack，heap增长方向相反。
+- .text，即代码段或正文段，存储可执行程序的二进制代码。
+- .data，即数据段，存储在程序启动时已初始化的全局变量和字符串常量。
+- .bss，即block stated by symbol，存储程序启动时未经初始化的全局变量和静态变量。
+- 因而.代码段、数据段、bss段所占存储空间由编译器编译时分配
+- stack，即栈空间，存储程序的临时变量，通常为局部变量，特点是地址从高地址向低地址分配；其次栈顶和栈的最大容量一般系统已经预定好了；还有就是所使用的空间，在函数撤销后会被系统自动收回，由自动化管理的特点；栈空间不大，所以当申请很大的空间时候不宜用栈，比如申请很大的数组空间、递归很多层的函数调用。
+- heap，即堆空间。地址分配从低地址向高地址增长；分配空间是手动分配，手动回收的形式，不会自动回收，无自动化，因而如果没有手动释放堆内存空间，就会发生**内存泄漏**
 
 ### 定义指针
 
