--- a/C/基础.md
+++ b/C/基础.md
@@ -98,7 +98,7 @@ label: statement;
 
 ```c++
 // 直接定义
-int a[5]; //中括号内必须是个常量，不能写成int a[i]，及数组的大小不能动态定义
+int a[5]; //中括号内必须是个常量，不能写成int a[i]，即数组的大小不能动态定义
 // 间接定义
 #define NUM 10;
 int b[NUM]={1,2,3,4,5,6,7,8,9,10};
