--- a/C/基础.md
+++ b/C/基础.md
@@ -159,11 +159,11 @@ scanf("%d%s%c%d",&i1,str,&c,&i2);
 scanf读取缓冲区遵循的规则：
 
 - 逐步，一个个的读取与模式匹配的数据，读取一个删除一个。删除的范围是：删除所有最终提取数据之前的缓冲区中的内容。
-  - 如上例子，现在stdin缓冲区中包含"15"," ","Hello"," ","R","23","\n"这7个数据。
+  - 如上例子，现在stdin缓冲区中包含"15"," ","Hello"," ","R"," ","23","\n"这8个数据。
 
   - scanf逐一读取缓冲区，第一轮读取15，匹配了%d，返回15并删除缓冲区中的15，结束该轮匹配。
 
-  - 第二轮要读取%s，**scanf函数中除了%c以外，所有匹配开始前都会忽略开始的空格或换行符**。因而该轮读取%s，首先忽略缓冲区中的“ ”，然后在开始读取。一直读取到下一个“ ”前结束，因而返回“Hello”，并在读取完毕后删除“ ”和“Hello”。
+  - 第二轮要读取%s，**scanf函数中除了%c以外，所有匹配开始前都会忽略开始的空格或换行符**。因而该轮读取%s，首先忽略缓冲区中的“ ”，然后再开始读取。一直读取到下一个“ ”前结束，因而返回“Hello”，并在读取完毕后删除“ ”和“Hello”。
 
   - 第三轮要读取%c，因为scanf()在读取该匹配前不忽略空格和换行符（因为这些符号也属于%c的范围），因而该轮会把“ ”读取出来传递给变量c，并删除缓冲区中的" "，从而造成错误。
 
@@ -223,6 +223,8 @@ sizeof(s1)	//返回的不是单个成员所占空间，即4(num)+20(name)+1(gend
 内存的这种分配方式称为--**对齐**
 
 对齐的作用是为了减少内存读取频率，提高CPU工作效率。
+
+因而，优化方法就是把站位大的数据放在结构体的前部，在结构体的结尾再定义小的数据段。
 
 #### 结构体定义
 
