--- a/C/基础.md
+++ b/C/基础.md
@@ -224,7 +224,7 @@ sizeof(s1)	//返回的不是单个成员所占空间，即4(num)+20(name)+1(gend
 
 对齐的作用是为了减少内存读取频率，提高CPU工作效率。
 
-因而，优化方法就是把站位大的数据放在结构体的前部，在结构体的结尾再定义小的数据段。
+因而，优化方法就是把占位大的数据放在结构体的前部，在结构体的结尾再定义小的数据段。
 
 #### 结构体定义
 
