--- a/C/指针.md
+++ b/C/指针.md
@@ -4,7 +4,9 @@
 
 同理，64位处理器有2^64个内存单元，即4G个4GB。这是虚拟地址，不是实际内存大小，实际内存大小可能是插入的8GB内存条，或是16GB内存。
 
-当程序运行时，操作系统会为每个程序分配运行所需的实际内存地址空间，这就是动态```地址转换``` 的过程。
+当程序运行时，操作系统会为每个程序分配运行所需的实际内存地址空间，这就是动态```地址转换``` 的过程，其过程为将虚拟地址空间转换到实际物理内存的过程。
+
+相对的，如果一个8G内存的计算机玩大小为50G的游戏，此种情况为换入换出，即内存的```swap```机制，即换入换出。
 
 ***因而在编程时所说的地址，指的是虚拟地址，即虚拟地址空间。***
 
