--- a/C/指针.md
+++ b/C/指针.md
@@ -16,7 +16,7 @@
 
   ```c++
   int i = 5;
-  long j = long(&j);
+  long j = long(&i);
   printf("%lx",j);
   //输出结果为：7ffee068f718
   //即只使用了48位虚拟地址，48位虚拟地址相当于256TB
