--- a/C/指针.md
+++ b/C/指针.md
@@ -21,7 +21,7 @@
   //输出结果为：7ffee068f718
   //即只使用了48位虚拟地址，48位虚拟地址相当于256TB
   //但是
-  printf("%ld",&i);
+  printf("%ld",sizeof(&i));
   //输出结果为8，即指针变量为8个字节
   ```
 
