--- a/C/指针.md
+++ b/C/指针.md
@@ -19,10 +19,11 @@
   long j = long(&i);
   printf("%lx",j);
   //输出结果为：7ffee068f718
-  //即只使用了48位虚拟地址，48位虚拟地址相当于256TB
+  //即只使用了48位虚拟地址，48位虚拟地址相当于256TB，更高位的地址保留待用
   //但是
   printf("%ld",sizeof(&i));
-  //输出结果为8，即指针变量为8个字节
+  //输出结果为8，即指针变量为8个字节，即64位
+  //综上就是，c语言已经兼容整体的64虚拟地址空间（64位），但是实际CPU厂商或当前C编译器只使用了48位。
   ```
 
   
