--- a/C/指针.md
+++ b/C/指针.md
@@ -42,8 +42,10 @@ printf("%lx\n", long(pj));
 /*输出结果为	 7ffee990b718 和 7ffee990b714
 说明：
 1. int占4个字节 
-2.i先定义，j后定义，但是i的地址比j地址大，
-则栈空间向低地址方向增长*/
+2. i先定义，j后定义，但是i的地址比j地址大，即栈空间向低地址方向增长
+其次如果是结构体char 字段在 数据的中间定义，为了整存整取，char还是
+会被对齐到int（4个字节）的位置，因而对齐方式没变，还是以4字节为单位
+*/
 
 long t = long(pi);
 printf("%d\n",*((int *)t)); //将t强转化成int*，然后解引用
