--- a/C/指针.md
+++ b/C/指针.md
@@ -37,21 +37,23 @@
 ```c++
 int i = 5;
 int j = 9;
-printf("%lx\n",long(pi));
-printf("%lx\n", long(pj));
+long *pi = &i;
+long *pj = &j;
+printf("%lx\n", pi);
+printf("%lx\n", pj);
 /*输出结果为	 7ffee990b718 和 7ffee990b714
 说明：
 1. int占4个字节 
 2. i先定义，j后定义，但是i的地址比j地址大，即栈空间向低地址方向增长
+
 其次如果是结构体char 字段在 数据的中间定义，为了整存整取，char还是
 会被对齐到int（4个字节）的位置，因而对齐方式没变，还是以4字节为单位
 */
 
-long t = long(pi);
-printf("%d\n",*((int *)t)); //将t强转化成int*，然后解引用
+printf("%d\n",*((int *)pi)); //将pi强转化成int*，然后解引用
 // 输出5
 t++;
-printf("%d\n",*((int *)t)); 
+printf("%d\n",*((int *)pi)); 
 // 输出0
 /*说明：
 小端模式，即变量的高字节在虚拟内存的低地址空间存储。
