--- a/C/指针.md
+++ b/C/指针.md
@@ -90,7 +90,7 @@ int *p, *q;
 
 ### 指针的解引用
 
-取值运算符```*```优先级低于自增自减```++``` ```--```运算符。因而(* p)++，指内容增加1，*p++，指取p后一个元素的值。
+取值运算符```*```优先级低于自增自减```++``` ```--```运算符。因而(* p)++，指先返回p所指内容，然后所指的空间的内容增加1，*p++，指取p所指的内容后p只向其后一个元素。
 
 ### 指针与函数参数
 
