--- a/C/指针.md
+++ b/C/指针.md
@@ -113,6 +113,20 @@ void change(OUT int *p){
 <img src="./images/Picture1.png" height=300 width=400>
 
 </div>
+```c++
+// 注意 区别
+#include <stdio.h>
+int main(){
+	int a[4][5];
+	printf("%lx\n",a); //输出 7ffeea6099a0
+	printf("%d\n",sizeof(a)); //输出 80
+	printf("%lx\n",a+0); //输出 7ffeea6099a0
+	printf("%d\n",sizeof(a+0)); //输出 8
+	printf("%lx\n",a+1);  //输出 7ffeea6099b4
+	printf("%d\n",sizeof(a+1));  //输出 8
+	return 0;
+}
+```
 
 ### 堆和栈
 
