--- a/C/指针.md
+++ b/C/指针.md
@@ -125,13 +125,15 @@ int main(){
 	printf("%d\n",sizeof(a+0)); //输出 8
 	printf("%lx\n",a+1);  //输出 7ffeea6099b4
 	printf("%d\n",sizeof(a+1));  //输出 8
+    printf("%d\n",sizeof(a[0]);  // 输出8
     printf("%d\n",sizeof(*(a+1))); // 输出20
 	return 0;
     // 综上所述，如果一个指针不进行运算，则他就保持原来的属性，
 	// 即原来是第几级，那么sizeof就是他这一级别的所有元素的总和
 	// 但是一个指针一旦进行了运算，比如a+1，那么它的属性就会变成一个纯指针。
 	// sizeof就是指针所占的空间大小，该处位64位系统，所以位8个字节
-	// 一解引用，它又变回了原来的整体概念，sizeof会包括所有这一级的元素
+	// 一但解引用，它又变回了原来的整体概念，sizeof会包括所有这一级的元素
+    // 但是a[0]不等于*(a+0)，而等于(a+0) ，因而sizeof(a[0])还是会返回指针的大小8
 }
 ```
 
