--- a/C/指针.md
+++ b/C/指针.md
@@ -125,7 +125,8 @@ int main(){
 	printf("%d\n",sizeof(a+0)); //输出 8
 	printf("%lx\n",a+1);  //输出 7ffeea6099b4
 	printf("%d\n",sizeof(a+1));  //输出 8
-    printf("%d\n",sizeof(a[0]);  // 输出8
+    printf("%d\n",sizeof(a[0]);  // 输出8 
+    printf("%ld\n",sizeof(&(*(a+1)))); // 输出8
     printf("%d\n",sizeof(*(a+1))); // 输出20
 	return 0;
     // 综上所述，如果一个指针不进行运算，则他就保持原来的属性，
@@ -134,6 +135,7 @@ int main(){
 	// sizeof就是指针所占的空间大小，该处位64位系统，所以位8个字节
 	// 一但解引用，它又变回了原来的整体概念，sizeof会包括所有这一级的元素
     // 但是a[0]不等于*(a+0)，而等于(a+0) ，因而sizeof(a[0])还是会返回指针的大小8
+    // 同理&去地址，还是返回的是指针级别，而不是整体级别。
 }
 ```
 
