--- a/C/指针.md
+++ b/C/指针.md
@@ -135,7 +135,7 @@ int main(){
     // sizeof就是指针所占的空间大小，该处位64位系统，所以位8个字节
     // 一但解引用，它又变回了原来的整体概念，sizeof会包括所有这一级的元素
     // 但是a[0]不等于*(a+0)，而等于(a+0) ，因而sizeof(a[0])还是会返回指针的大小8
-    // 同理&去地址，还是返回的是指针级别，而不是整体级别。
+    // 同理&取地址，还是返回的是指针级别，而不是整体级别。
 }
 ```
 
@@ -155,14 +155,14 @@ int main(){
 
     ```c++
     #include <stdlib.h>
-    void *malloc(size_t size);  //返回一个空指针，指向开辟堆堆虚拟地址空间首地址。
+    void * malloc(size_t size);  //返回一个空指针，指向开辟堆虚拟地址空间首地址。
     // size_t 指int类型，一般表示空间大小。
     
     //因而开辟1MB的堆空间可以写成
     void * p = malloc(1<<20);
     ```
 
-    堆开辟空间大小的上限是**物理内存大小**，实际工作中，开辟过大服务器堆内存需要向组织申请。
+    堆开辟空间大小的上限是**物理内存大小**，实际工作中，开辟过大服务器堆内存需要向组织部门申请。
 
     开辟堆空间会出现的**问题**
 
@@ -187,7 +187,7 @@ int main(){
 
     ***延迟分配，lazy model或写时分配***
 
-    即只有当对对内存中存入实际内容是，malloc才会实际分配内存。
+    即只向内存中实际存入内容时，malloc才会实际分配内存。
 
     ```c++
     #include<stdlib.h>
@@ -224,9 +224,11 @@ int main(){
 - 指针数组
 
   ```c++
-  int a[3][5];
-  int *p[5];
-  p = a;  //*先与int和p结合，即p是一个数组名，其中每个元素为整型指针
+  int *a[3];
+  int x = 4;
+  int y = 6;
+  a[0] = &x;
+  a[1] = &y;  //*先与int和p结合，即p是一个数组名，其中每个元素为整型指针
   ```
 
 - 二级指针
