--- a/C/内存管理.md
+++ b/C/内存管理.md
@@ -13,7 +13,7 @@ void * memset(void *b, int c, size_t len);
 ```c
 #include<stdlib.h>
 int i;
-void * p = malloc(1<<20); //用malloc申请1KB大小的内存空间
+void * p = malloc(1<<20); //用malloc申请1MB大小的内存空间
 void * p2 = calloc(1024,sizeof(int)); //用calloc申请1024个int大小的空间，
 // calloc会默认初始化空间为0
 ```
