--- a/Linux/进程.md
+++ b/Linux/进程.md
@@ -289,7 +289,7 @@ waitpid的参数：
 
    </div>
 
-4. abort函数：中间层的调用接口，使进程异常终止，它向自己发送一个终止信号，另自己终止。
+4. abort函数：中间层的调用接口，使进程异常终止，它向自己发送一个终止信号，令自己终止。
 
 5. 系统信号量终止：ctrl+c，ctrl+ \
 
