--- a/Linux/线程.md
+++ b/Linux/线程.md
@@ -18,7 +18,7 @@
 
 #### 上下文切换
 
-上下文切换主要是对CPU的执行流程进行切换，需要更改的是内核中管理调度的一些结构体
+上下文切换主要是对CPU的执行流程进行切换，需要更改的是内核中管理调度的一些结构体，因为内核需要维护整个系统中所有进程的调度，因而切换进程会涉及到庞大的PCB列表的查询，优先权等复杂的调度问题；加上还有很多寄存器的写回等操作，因而会造成大量的时间片浪费。而线程调度在一般Linux体系下只是轻量级别的调度，涉及到的查询，优先级等问题的只限于本进程领域，因而会节省大量时间片。
 
 - PC指针（程序计数器）
 - 内核维护的TLB：TLB(Translation Lookaside Buffer)转换检测缓冲区是一个内存管理单元,用于改进虚拟地址到物理地址转换速度的缓存。简单来说，就是**虚拟内存空间映射到实际物理内存的转换表**。这个表的作用就是缓存按照一定算法缓存的页表，页目录（最近访问优先替换算法等）。这样在内存地址转换时，就不用查找页表，因而算是一个cache。若地址映射时有miss，才实际查找物理页表。**PCB，上下文切换，意味着所有TLB页表miss**，因而需要很长时间加载。
